--- a/app/views/api/v1/immunotherapies/show.html.erb
+++ b/app/views/api/v1/immunotherapies/show.html.erb
@@ -1,137 +1,5 @@
-
-<img src=<%="#{ENV['RAILS_SERVE_STATIC_FILES']}/images/logo.png"%> >
-<div className={classes.container}>
-      <div className={`${classes.box} ${classes.nowrap}`}>
-        <div className={classes.row}>
-          <div className={classes.title}>PACIENTE:</div>
-        </div>
-        <div className={classes.row}>
-          <div className={classes.item}>NOME: <%= @immunotherapy.patient.name%></div>
-          <div className={classes.last_field}>DN: <%= @immunotherapy.patient.birthday%></div>
-        </div>
-        {formData.responsable.length > 0 && (
-          <div className={classes.row}>
-            <div className={classes.item}>RESP: {formData.responsable}</div>
-            <div className={classes.last_field}>
-              GRAU PAR: {formData.relative_degree}
-            </div>
-          </div>
-        )}
-        <div className={classes.row}>
-          <div className={classes.item}>CPF RESP/PCTE: {formData.cpf}</div>
-          <div className={classes.item}>CONTATO: {formData.contact}</div>
-          <div className={classes.proc}>PROC: {formData.proc}</div>
-          <div className={classes.last_field}>GN: {formData.gender}</div>
-        </div>
-      </div>
-      <div className={classes.box}>
-        <div className={classes.title}>EXAMES</div>
-        <div>
-          {formData.totalIgE.length > 0 &&
-            "IgE Total (UI/mL): " + formData.totalIgE + ". "}
-          {formData.especificIgE.length > 0 &&
-            "IgE Específico (kU/L): " + formData.especificIgE + ". "}
-          {formData.eosinofilosPerc.length > 0 && (
-            <span>
-              Eosinófilos: {formData.eosinofilosPerc}% {formData.eosinofilosmm}
-              /mm<sup>3</sup>.{" "}
-            </span>
-          )}
-          {formData.prickTest.length > 0 &&
-            "Prick Test (mm): " + formData.prickTest + ". "}
-          {formData.patchTest.length > 0 &&
-            "Patch Test: " + formData.patchTest + ". "}
-          {formData.others.length > 0 && formData.others + ". "}
-        </div>
-        <div className={classes.title}>DIAGNÓSTICO PRIMÁRIO</div>
-        <div>{formData.primaryDiagnosis}</div>
-        <div className={classes.title}>DIAGNÓSTICO SECUNDÁRIO</div>
-        <div>{formData.secondaryDiagnosis}</div>
-      </div>
-      <div className={classes.box}>
-        <div className={classes.title}>COMPOSIÇÃO DA IMUNOTERAPIA</div>
-        <div>{formData.therapyComposition}</div>
-        <div className={classes.title}>DILUIÇÃO E VOLUME DOS FRASCOS</div>
-        <div>{formData.volume}</div>
-      </div>
-      <div>
-        <u>
-          <b>USO SUBLINGUAL</b>
-        </u>
-        <div className={classes.row}>
-          <div className={classes.img_container}>
-            <img
-              src={modo_uso_img}
-              alt="modo de uso"
-              className={classes.mode_img}
-            />
-          </div>
-          <div className={classes.item}>
-            <b>MODO DE USO:</b> Agitar bem o frasco, em seguida aplicar{" "}
-            <u>{formatLeftZeros(formData.drops, 2)}</u> gotas sublinguais e
-            manter por pelo menos um minuto antes de engolir. Não comer ou beber
-            nada por no mínimo 30 minutos após a aplicação da Imunoterapia.
-            Manter a dose de <u>{formatLeftZeros(formData.drops, 2)}</u> gotas
-            ao dia até terminar o frasco.
-          </div>
-        </div>
-        <div className={classes.row}>
-          <div className={classes.img_container}>
-            <img
-              src={modo_conservacao_img}
-              alt="modo de conservacao"
-              className={classes.mode_img}
-            />
-          </div>
-          <div className={classes.item}>
-            <b>MODO DE CONSERVAÇÃO E CUIDADOS:</b> Após aberto, o frasco deve
-            ser mantido refrigerado entre 2°C e 10°C. Não deve ser guardado na
-            porta da geladeira, devido à variação de temperatura durante o abrir
-            e fechar do eletrodoméstico. Nunca deve ser congelado. Mantenha
-            longe de crianças e animais domésticos.
-          </div>
-        </div>
-      </div>
-      <div>
-        <u>
-          <b>FASES DA VACINA</b>
-        </u>
-      </div>
-      <div className={classes.magin_left}>
-        <br />
-        <b>FASE DE INDUÇÃO:</b> Nesta fase, administra-se pequenas doses do
-        alérgeno, com base na sensibilidade individual de cada paciente. Neste
-        período inicial já pode ser observada melhora dos sintomas. As doses são
-        aumentadas progressivamente até chegar à dose ótima, que é a máxima
-        suportada pelo paciente (Fase de Manutenção). <br />
-        <b>FASE DE MANUTENÇÃO:</b> É definida como a dose adequada para induzir
-        efeito clínico relevante ao paciente, sem efeitos indesejáveis,
-        promovendo mudanças protetoras no sistema imunológico. Assim, o paciente
-        não só deve tolerar o contato com os alérgenos utilizados na
-        imunoterapia, mas também tornar essa tolerância duradoura - estima-se
-        pelo menos 5 a 6 anos após o fim do tratamento, mediante situações de
-        controle ambiental.
-        <br />
-        <b>FASE ESPECIAL:</b> É usada em casos que o quadro clínico do paciente
-        necessita de doses mais diluídas, para evitar efeitos colaterais ou a
-        piora do quadro alérgico no início do tratamento, portanto fazendo parte
-        da fase indução.
-        <img
-          src={
-            formData.volume ===
-            "1:10.000 (6mL) + 1:1.000 (6mL) + 1:100 (6mL) + 1:10 (por 3 a 5 anos). Reavaliar a partir do segundo frasco de Manutenção."
-              ? fases_vacina_120_img
-              : fases_vacina_160_img
-          }
-          alt="Fases da Vacina"
-          className={classes.img_vacina}
-        />
-        <div className={classes.legend}>
-          <b>ATENÇÃO:</b> Interromper a imunoterapia em qualquer fase pode
-          torná-la ineficaz. Em casos de infecções graves, acompanhadas de
-          quadros febris persistentes, ou na piora dos sintomas alérgicos, podem
-          ser sugestivos de suspender a imunoterapia temporariamente, a critério
-          médico e pelo período recomendado em cada situação.
-        </div>
-      </div>
-    </div>
+<%= stylesheet_link_tag "immunotherapies"%>
+<%= image_tag "logo.png" %>
+<div class="alguma">
+Algo
+</div>
