--- a/app/views/api/v1/immunotherapies/show.html.erb
+++ b/app/views/api/v1/immunotherapies/show.html.erb
@@ -1,5 +1,129 @@
 <%= stylesheet_link_tag "immunotherapies"%>
-<%= image_tag "logo.png" %>
-<div class="alguma">
-Algo
+<div class="page_title">
+  RECEITUÁRIO DE IMUNOTERAPIA ALÉRGENO-ESPECÍFICA SUBLINGUAL
 </div>
+<div class="container">
+  <div class="box nowrap">
+    <div class="row">
+      <div class="field_title">PACIENTE:</div>
+    </div>
+    <div class="row">
+      <div class="item">NOME: <%=@immunotherapy.patient.name%></div>
+      <div class="last_field">DN: <%= format_date_to_br(@immunotherapy.patient.birthday)%></div>
+    </div>
+    <% if @immunotherapy.patient.responsable_name.length > 0%>
+    <div class="row">
+      <div class="item">RESP: <%=@immunotherapy.patient.responsable_name%></div>
+      <div class="last_field">
+        GRAU PAR: <%=@immunotherapy.patient.responsable_degree%>
+      </div>
+    </div>
+    <%end%>
+    <div class="row">
+      <div class="item">CPF RESP/PCTE: <%=@immunotherapy.patient.cpf%></div>
+      <div class="item">CONTATO: <%=@immunotherapy.patient.contact%></div>
+      <div class="proc">PROC: <%=@immunotherapy.patient.origin%></div>
+      <div class="last_field">GN: <%=@immunotherapy.patient.gender%></div>
+    </div>
+  </div>
+  <div class="box">
+    <div class="field_title">EXAMES</div>
+    <div>
+      <%="IgE Total (UI/mL): " + @immunotherapy.ige_total + ". " if @immunotherapy.ige_total.length > 0 %>
+      <%="IgE Específico (kU/L): " + @immunotherapy.ige_specific + ". " if @immunotherapy.ige_specific.length > 0 %>
+      <%if @immunotherapy.eosinofilos_perc.length > 0%>
+        <span>
+          Eosinófilos: <%=@immunotherapy.eosinofilos_perc%>%<%=@immunotherapy.eosinofilos_mm%>
+          /mm<sup>3</sup>.{" "}
+        </span>
+      <%end%>
+      <%="Prick Test (mm): " + @immunotherapy.prick_summary + ". " if @immunotherapy.prick_summary.length > 0 %>        
+      <%="Patch Test: " + @immunotherapy.patch_summary + ". " if @immunotherapy.patch_summary.length  > 0 %>
+      <%=@immunotherapy.others + ". " if @immunotherapy.others.length  > 0 %>  
+    </div>
+    <div class="field_title">DIAGNÓSTICO PRIMÁRIO</div>
+    <div><%=@immunotherapy.primary_diagnosis%></div>
+    <div class="field_title">DIAGNÓSTICO SECUNDÁRIO</div>
+    <div><%=@immunotherapy.secondary_diagnosis%></div>
+  </div>
+  <div class="box">
+    <div class="field_title">COMPOSIÇÃO DA IMUNOTERAPIA</div>
+    <div><%=@immunotherapy.immunotheray_composition%></div>
+    <div class="field_title">DILUIÇÃO E VOLUME DOS FRASCOS</div>
+    <div><%=@immunotherapy.dilution_volume%></div>
+  </div>
+  <div>
+    <u>
+      <b>USO SUBLINGUAL</b>
+    </u>
+    <div class="row">
+      <div class="img_container">
+        <%= image_tag "immunotherapies/modo_uso.png", :class => "mode_img" %>
+      </div>
+      <div class="item">
+        <b>MODO DE USO:</b> Agitar bem o frasco, em seguida aplicar <u><%=format_left_zeros(@immunotherapy.sublingual_drops, 2)%></u> gotas sublinguais e manter
+        por pelo menos um minuto antes de engolir. Não comer ou beber nada por
+        no mínimo 30 minutos após a aplicação da Imunoterapia. Manter a dose de
+        <u><%=format_left_zeros(@immunotherapy.sublingual_drops, 2)%></u> gotas ao dia até terminar o
+        frasco.
+      </div>
+    </div>
+    <div class="row">
+      <div class="img_container">
+        <%= image_tag "immunotherapies/modo_conservacao.png", :class =>
+        "mode_img" %>
+      </div>
+      <div class="item">
+        <b>MODO DE CONSERVAÇÃO E CUIDADOS:</b> Após aberto, o frasco deve ser
+        mantido refrigerado entre 2°C e 10°C. Não deve ser guardado na porta da
+        geladeira, devido à variação de temperatura durante o abrir e fechar do
+        eletrodoméstico. Nunca deve ser congelado. Mantenha longe de crianças e
+        animais domésticos.
+      </div>
+    </div>
+  </div>
+   <div>
+    <u>
+      <b>FASES DA VACINA</b>
+    </u>
+  </div>
+  <div class="magin_left">
+    <br />
+    <b>FASE DE INDUÇÃO:</b> Nesta fase, administra-se pequenas doses do
+    alérgeno, com base na sensibilidade individual de cada paciente. Neste
+    período inicial já pode ser observada melhora dos sintomas. As doses são
+    aumentadas progressivamente até chegar à dose ótima, que é a máxima
+    suportada pelo paciente (Fase de Manutenção). <br />
+    <b>FASE DE MANUTENÇÃO:</b> É definida como a dose adequada para induzir
+    efeito clínico relevante ao paciente, sem efeitos indesejáveis, promovendo
+    mudanças protetoras no sistema imunológico. Assim, o paciente não só deve
+    tolerar o contato com os alérgenos utilizados na imunoterapia, mas também
+    tornar essa tolerância duradoura - estima-se pelo menos 5 a 6 anos após o
+    fim do tratamento, mediante situações de controle ambiental.
+    <br />
+    <b>FASE ESPECIAL:</b> É usada em casos que o quadro clínico do paciente
+    necessita de doses mais diluídas, para evitar efeitos colaterais ou a piora
+    do quadro alérgico no início do tratamento, portanto fazendo parte da fase
+    indução.
+
+    <%=if @immunotherapy.dilution_volume == "1:10.000 (6mL) + 1:1.000 (6mL) +
+    1:100 (6mL) + 1:10 (por 3 a 5 anos). Reavaliar a partir do segundo frasco de
+    Manutenção."
+    
+    image_tag "immunotherapies/fases_vacina_120.png", :class=> "img_vacina"  
+    
+    else
+    
+    image_tag "immunotherapies/fases_vacina_160.png", :class=> "img_vacina"  
+    end%>
+
+    <div class="legend">
+      <b>ATENÇÃO:</b> Interromper a imunoterapia em qualquer fase pode torná-la
+      ineficaz. Em casos de infecções graves, acompanhadas de quadros febris
+      persistentes, ou na piora dos sintomas alérgicos, podem ser sugestivos de
+      suspender a imunoterapia temporariamente, a critério médico e pelo período
+      recomendado em cada situação.
+    </div>
+  </div>
+</div>
+<%# <%= render partial: "api/v1/shared/signature_and_stamp", locals: {city: @immunotherapy.city, date: @immunotherapy.signature_date} %> %>
