pdf into tmp dir

--- a/app/views/api/v1/immunotherapies/show.html.erb
+++ b/app/views/api/v1/immunotherapies/show.html.erb
@@ -126,4 +126,4 @@
     </div>
   </div>
 </div>
-<%# <%= render partial: "api/v1/shared/signature_and_stamp", locals: {city: @immunotherapy.city, date: @immunotherapy.signature_date} %> %>
+<%= render partial: "api/v1/shared/signature_and_stamp", locals: {city: @immunotherapy.city, date: @immunotherapy.signature_date} %>
