--- a/app/views/api/v1/shared/_signature_and_stamp.html.erb
+++ b/app/views/api/v1/shared/_signature_and_stamp.html.erb
@@ -1,6 +1,6 @@
 <div className={classes.row}>
   <p className={classes.info}>
-    <%=city%>, <%=date.to_s%>.
+    <%=city%>, <%=date_to_string(date)%>.
   </p>
   Stamp
 </div>
