--- a/app/views/api/v1/immunotherapies/show.html.erb
+++ b/app/views/api/v1/immunotherapies/show.html.erb
@@ -26,7 +26,7 @@
       <div class="item">CPF RESP/PCTE: <%=@immunotherapy.patient.cpf%></div>
       <div class="item">CONTATO: <%=@immunotherapy.patient.contact%></div>
       <div class="proc">PROC: <%=@immunotherapy.patient.origin%></div>
-      <div class="last_field">GN: <%=@immunotherapy.patient.gender%></div>
+      <div class="last_field">GN: <%=@immunotherapy.patient.gender[0]%></div>
     </div>
   </div>
   <div class="box">
