--- a/app/views/api/v1/immunotherapies/show.html.erb
+++ b/app/views/api/v1/immunotherapies/show.html.erb
@@ -37,7 +37,7 @@
       <%if @immunotherapy.eosinofilos_perc.length > 0%>
         <span>
           Eosinófilos: <%=@immunotherapy.eosinofilos_perc%>%<%=@immunotherapy.eosinofilos_mm%>
-          /mm<sup>3</sup>.{" "}
+          /mm<sup>3</sup>.
         </span>
       <%end%>
       <%="Prick Test (mm): " + @immunotherapy.prick_summary + ". " if @immunotherapy.prick_summary.length > 0 %>        
@@ -109,9 +109,7 @@
     do quadro alérgico no início do tratamento, portanto fazendo parte da fase
     indução.
 
-    <%=if @immunotherapy.dilution_volume == "1:10.000 (6mL) + 1:1.000 (6mL) +
-    1:100 (6mL) + 1:10 (por 3 a 5 anos). Reavaliar a partir do segundo frasco de
-    Manutenção."
+    <%=if @immunotherapy.dilution_volume == "1:10.000 (6mL) + 1:1.000 (6mL) + 1:100 (6mL) + 1:10 (por 3 a 5 anos). Reavaliar a partir do segundo frasco de Manutenção."
     
     image_tag "immunotherapies/fases_vacina_120.png", :class=> "img_vacina"  
     
