--- a/app/assets/stylesheets/one_a5_page.css
+++ b/app/assets/stylesheets/one_a5_page.css
@@ -1,6 +1,11 @@
 #content{
-  width: 14.8cm;
+  /* width: 14.8cm; */
   height: 19.9cm;
-  padding: 0.5cm 0.5cm 0.9cm;
+  padding: 0;
+  padding-top: 0.5cm;
+  padding-bottom: 0.5cm;
+  padding-left: 0.5cm;
+  padding-right: 0.5cm;
   position: relative;
+  /* border: 1px solid; */
 }
