--- a/app/assets/stylesheets/immunotherapies.css
+++ b/app/assets/stylesheets/immunotherapies.css
@@ -6,7 +6,7 @@
   text-align: center;
 }
 .container {
-  padding: 0.5cm;
+  padding: 0 0.2cm;
   margin-top: 5px;
   font-size: 9.5px;
   text-align: justify;
